# rust_cfd

./: .gitignore  Cargo.toml  README.md
godunov/: Cargo.toml
godunov/src/: lib.rs  main.rs
src/: euler.rs  euler1d.rs  euler2d.rs  fluxes.rs  lib.rs  limiters.rs  pde.rs  riemann.rs
src/fluxes/: fluxes2d.rs
src/riemann/: mod.rs  waves.rs
