[package]
name = "rust_cfd"
version = "0.1.0"
authors = ["Max Orok <morok@mevex.com>"]
edition = "2018"

[lib]
name = "rust_cfd"
path = "src/lib.rs"

[dependencies]
rand = "0.7"

# safe unsigned-float conversions
num-traits = "0.2"

# our homebrew midpoint rule fork of gauss-quad
gauss-quad = { git = "https://github.com/mxxo/gauss-quad", branch = "midpoint-rule" }

nalgebra = "0.18"
nalgebra-lapack = "0.10"

approx = "0.3"
itertools-num = "0.1"
